crates/abp-policy/tests/snapshots/snapshots_test__policy_profile_default.snap
---
source: crates/abp-policy/tests/snapshots_test.rs
expression: policy
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
