crates/abp-policy/tests/snapshots/snapshots_test__policy_profile_tool_patterns.snap
---
source: crates/abp-policy/tests/snapshots_test.rs
expression: policy
---
{
  "allowed_tools": [
    "read",
    "glob",
    "grep"
  ],
  "disallowed_tools": [
    "bash",
    "exec"
  ],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
